--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       }
     </style> -->
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
-    <link rel="stylesheet" href="./scss/main.css" />
+    <!-- <link rel="stylesheet" href="./scss/main.css" /> -->
+    <!-- <link rel="stylesheet" href="./css/main.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
@@ -184,6 +186,11 @@
             <ul class="formats-list">
               <li class="format-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/walrus-format.jpg"
+                    alt="Walrus format"
+                  />
                   <h3 class="format-title" lang="en">Walrus</h3>
                   <div class="format-text">
                     <p>Площа: до 120 м2</p>
@@ -198,6 +205,11 @@
               </li>
               <li class="format-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/horseshoe-format.jpg"
+                    alt="Horseshoe format"
+                  />
                   <h3 class="format-title" lang="en">Horseshoe</h3>
                   <div class="format-text">
                     <p>Площа: до 25 м2</p>
@@ -209,6 +221,11 @@
               </li>
               <li class="format-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/handlebar-format.jpg"
+                    alt="Handlebar format"
+                  />
                   <h3 class="format-title" lang="en">Handlebar</h3>
                   <div class="format-text">
                     <p>Площа: до 15 м2</p>
@@ -383,8 +400,8 @@
       </div>
     </footer>
 
-    <!-- <div class="backdrop" is-hidden> -->
-    <div class="backdrop">
+    <div class="backdrop" is-hidden>
+      <!-- <div class="backdrop"> -->
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
         <h2>Замовити дзвінок</h2>
