--- a/index.html
+++ b/index.html
@@ -27,19 +27,11 @@
   </head>
 
   <body>
-    <!-- <dl>
-      <dt>VS code</dt>
-      <dd>Редактор коду</dd>
-      <dt>Figma</dt>
-      <dd>Графiчний редактор</dd>
-      <dt>Chrome</dt>
-      <dd>Браузер</dd>
-    </dl> -->
     <header class="header">
       <div class="container">
-        <div class="header-container">
+        <div class="header__container">
           <!-- этот div для созд-я flex -->
-          <nav class="header-nav">
+          <nav class="header__nav">
             <a href="./index.html">
               <!-- logo -->
               <!-- <img src="./images/logo.svg" alt="Логотип сучасної пекарні" /> -->
@@ -56,7 +48,7 @@
                 />
               </svg>
             </a>
-            <ul class="header-menu">
+            <ul class="header__menu">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -81,7 +73,12 @@
       <!-- <section><h1 style="color: burlywood">Сучасна пекарня</h1></section> -->
       <!-- <section><h1 class="main-title">Сучасна пекарня</h1></section> -->
       <section class="hero-section">
-        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+        <div class="container">
+          <h1 class="hero-section__title">
+            <!-- <span class="accent">Сучасна</span> пекарня -->
+            <span class="text-brand">Сучасна</span> пекарня
+          </h1>
+        </div>
       </section>
       <!-- <div class="test-box"></div> -->
       <section class="advantages-section">
@@ -102,14 +99,18 @@
                 Новий формат традицій
               </h2>
               <p class="traditions-text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня,
-                яка взяла все найкраще, і зберегла смак традиційної випічки та
-                натуральність інгредієнтів.
+                <span class="text-brand text-bold text-uppercase"
+                  >shop bakery</span
+                >
+                — це пекарня, яка взяла все найкраще, і зберегла смак
+                традиційної випічки та натуральність інгредієнтів.
               </p>
               <p class="traditions-text limited">
                 Ми працюємо як найвідоміші мережі —
-                <span class="brand"> 5 хвилин і замовлення готове</span>. А ще у
-                наших пекарень стильний дизайн та висока якість обслуговування!
+                <span class="text-brand text-bold">
+                  5 хвилин і замовлення готове</span
+                >. А ще у наших пекарень стильний дизайн та висока якість
+                обслуговування!
               </p>
             </div>
             <img
@@ -247,8 +248,6 @@
       </section>
 
       <section class="contact-section section" id="contact-section">
-        <!-- </section> -->
-
         <div class="container">
           <div class="contact-container">
             <div class="contact-form">
