--- a/index.html
+++ b/index.html
@@ -84,18 +84,23 @@
       <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">Великий попит на ринку</li>
-            <li class="advantages-item">Доступні за бюджетом формати</li>
-            <li class="advantages-item">Досвідчена управлінська команда</li>
+          <ul class="advantages-section__list">
+            <li class="advantages-section__item">Великий попит на ринку</li>
+            <li class="advantages-section__item">
+              Доступні за бюджетом формати
+            </li>
+            <li class="advantages-section__item">
+              Досвідчена управлінська команда
+            </li>
           </ul>
         </div>
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <div class="traditions-container">
-            <div class="traditions-content">
-              <h2 class="traditions-title section-title">
+          <div class="traditions-section__container">
+            <div class="traditions-section__content">
+              <!-- <h2 class="traditions-section__title section-title"> -->
+              <h2 class="traditions-section__title section__title">
                 Новий формат традицій
               </h2>
               <p class="traditions-text">
@@ -105,7 +110,11 @@
                 — це пекарня, яка взяла все найкраще, і зберегла смак
                 традиційної випічки та натуральність інгредієнтів.
               </p>
-              <p class="traditions-text limited">
+              <!-- <p class="traditions-text limited"> -->
+              <!-- <p class="traditions-section__text limited"> -->
+              <p
+                class="traditions-section__text traditions-section__text--limited"
+              >
                 Ми працюємо як найвідоміші мережі —
                 <span class="text-brand text-bold">
                   5 хвилин і замовлення готове</span
@@ -120,52 +129,62 @@
           </div>
         </div>
       </section>
-      <section class="section" id="chefs-section">
+      <!-- <section class="section" id="chefs-section"> -->
+      <section class="chefs-section section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title centered">
+          <!-- <h2 class="chefs-title section-title centered"> -->
+          <!-- <h2 class="chefs-section__title section-title centered"> -->
+          <!-- <h2 class="chefs-section__title section__title centered"> -->
+          <h2
+            class="chefs-section__title section__title section__title--centered"
+          >
             Наші найкращі <br />
-            <span class="accent">шеф-кухарі</span>
+            <!-- <span class="accent">шеф-кухарі</span> -->
+            <span class="text-brand-dark">шеф-кухарі</span>
           </h2>
-          <ul class="chefs-list">
-            <li class="chefs-item">
+          <!-- <ul class="chefs-list"> -->
+          <ul class="chefs-section__list">
+            <!-- <li class="chefs-item"> -->
+            <li class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/nastya-chef.jpg"
                   alt="Nastya chef"
                 />
                 <div>
-                  <h3 class="chef-title">Настя</h3>
-                  <div class="chef-text">
-                    <p>Привіт, я Настя!</p>
-                    <p>
-                      Вже 10 років, я втілюю <br />
-                      у життя цікаві та смачні ідеї.
-                    </p>
-                    <p>
-                      Я випічу для вас <br />
-                      найсмачніщі вироби!
-                    </p>
-                  </div>
+                  <h3 class="chef-card__title">Настя</h3>
+                  <!-- <div class="chef-card__text"> -->
+                  <p class="chef-card__text">Привіт, я Настя!</p>
+                  <p class="chef-card__text">
+                    Вже 10 років, я втілюю <br />
+                    у життя цікаві та смачні ідеї.
+                  </p>
+                  <p class="chef-card__text">
+                    Я випічу для вас <br />
+                    найсмачніщі вироби!
+                  </p>
+                  <!-- </div> -->
                 </div>
               </article>
             </li>
-            <li class="chefs-item">
+            <!-- <li class="chefs-item"> -->
+            <li class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/vlad-chef.jpg"
                   alt="Vlad chef"
                 />
                 <div>
-                  <h3 class="chef-title">Влад</h3>
-                  <p class="chef-text">Привіт, я Влад!</p>
-                  <p class="chef-text">
+                  <h3 class="chef-card__title">Влад</h3>
+                  <p class="chef-card__text">Привіт, я Влад!</p>
+                  <p class="chef-card__text">
                     Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша
                     любов, з якою ми ділимось кожен раз з Вами через нашу
                     випічку!
                   </p>
-                  <p class="chef-text">
+                  <p class="chef-card__text">
                     Я зроблю для вас унікальну начинку на будь який смак!
                   </p>
                 </div>
@@ -174,26 +193,38 @@
           </ul>
         </div>
       </section>
-      <section class="section" id="format-section">
+      <!-- <section class="section" id="format-section"> -->
+      <section class="formats-section section" id="format-section">
         <div class="container">
-          <h2 class="formats-title section-title centered">Формати</h2>
-          <div class="formats-container">
+          <!-- <h2 class="formats-title section-title centered">Формати</h2> -->
+          <h2
+            class="formats-section__title section__title section__title--centered"
+          >
+            Формати
+          </h2>
+          <!-- <div class="formats-container"> -->
+          <div class="formats-section__container">
             <button class="carousel-button" type="button">
               <!-- <svg class="carousel-arrow" width="16" height="16"></svg> -->
               <svg width="16" height="16">
                 <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
-            <ul class="formats-list">
-              <li class="format-item">
+            <!-- <ul class="formats-list"> -->
+            <ul class="formats-section__list">
+              <!-- <li class="format-item"> -->
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/walrus-format.jpg"
                     alt="Walrus format"
                   />
-                  <h3 class="format-title" lang="en">Walrus</h3>
-                  <div class="format-text">
+                  <!-- <h3 class="format-title" lang="en">Walrus</h3> -->
+                  <h3 class="format-card__title" lang="en">Walrus</h3>
+
+                  <!-- <div class="format-text"> -->
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -204,15 +235,18 @@
                   </div>
                 </article>
               </li>
-              <li class="format-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/horseshoe-format.jpg"
                     alt="Horseshoe format"
                   />
-                  <h3 class="format-title" lang="en">Horseshoe</h3>
-                  <div class="format-text">
+                  <!-- <h3 class="format-title" lang="en">Horseshoe</h3> -->
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+
+                  <!-- <div class="format-text"> -->
+                  <div class="format-card__text">
                     <p>Площа: до 25 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
@@ -220,15 +254,18 @@
                   </div>
                 </article>
               </li>
-              <li class="format-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/handlebar-format.jpg"
                     alt="Handlebar format"
                   />
-                  <h3 class="format-title" lang="en">Handlebar</h3>
-                  <div class="format-text">
+                  <!-- <h3 class="format-title" lang="en">Handlebar</h3> -->
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+
+                  <!-- <div class="format-text"> -->
+                  <div class="format-card__text">
                     <p>Площа: до 15 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
@@ -249,45 +286,71 @@
 
       <section class="contact-section section" id="contact-section">
         <div class="container">
-          <div class="contact-container">
-            <div class="contact-form">
-              <h2 class="contact-title section-title">
+          <!-- <div class="contact-container"> -->
+          <div class="contact-section__container">
+            <!-- <div class="contact-form"> -->
+            <div class="contact-section__form">
+              <!-- <h2 class="contact-title section-title"> -->
+              <h2 class="contact-section__title section__title">
                 Приєднуйся до мережі пекарень
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
               <!-- Form -->
+              <!-- <form name="contact-form" autocomplete="off"> -->
+              <!-- <form
+                class="contact-section__form"
+                name="contact-form"
+                autocomplete="off"
+              > -->
               <form name="contact-form" autocomplete="off">
                 <!-- <legend>Контактна iнформацiя</legend> -->
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-name"
+
+                <!-- <div class="form-field"> -->
+
+                <!-- <div class="contact-section__field"> -->
+                <!-- <div class="contact-section__form-field"> -->
+                <div class="contact-section__form-field input">
+                  <!-- <label class="form-label visually-hidden" for="user-name" -->
+                  <label class="input__label visually-hidden" for="user-name"
                     >Ім’я</label
                   >
+
+                  <!-- <input
+                    class="form-input" -->
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="text"
                     id="user-name"
                     name="user-name"
                     placeholder="Ім’я"
                   />
                 </div>
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-tel"
+
+                <!-- <div class="form-field"> -->
+                <!-- <div class="contact-section__form-field"> -->
+                <div class="contact-section__form-field input">
+                  <!-- <label class="form-label visually-hidden" for="user-tel" -->
+                  <label class="input__label visually-hidden" for="user-tel"
                     >Телефон</label
                   >
+                  <!-- <input
+                    class="form-input" -->
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="tel"
                     id="user-tel"
                     name="user-tel"
                     placeholder="Телефон"
                   />
                 </div>
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-email"
+
+                <!-- <div class="form-field"> -->
+                <div class="contact-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-email"
                     >Електронна пошта</label
                   >
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="email"
                     id="user-email"
                     name="user-email"
@@ -295,13 +358,15 @@
                   />
                 </div>
 
-                <button class="form-button button" type="submit">
+                <!-- <button class="form-button button" type="submit"> -->
+                <button class="contact-section__button button" type="submit">
                   Замовити дзвінок
                 </button>
 
                 <p class="form-terms">
                   Натискаючи на кнопку я погоджуюсь з
-                  <a class="form-terms-link" href="#"
+                  <!-- <a class="form-terms-link" href="#" -->
+                  <a class="form-terms__link" href="#"
                     >політикою конфіденційності</a
                   >
                 </p>
@@ -313,7 +378,7 @@
           </p> -->
 
             <iframe
-              class="contact-map"
+              class="contact-section__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.164724367906!2d30.491251499999997!3d50.4566572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1718219965162!5m2!1sru!2sua"
               width="603"
               height="595"
@@ -399,21 +464,37 @@
       </div>
     </footer>
 
-    <div class="backdrop" is-hidden>
-      <!-- <div class="backdrop"> -->
+    <!-- <div class="backdrop is-hidden"> -->
+    <div class="backdrop">
       <div class="modal">
-        <button class="modal-btn-close" type="button">Close</button>
-        <h2>Замовити дзвінок</h2>
-        <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+        <!-- <button class="modal-btn-close" type="button">Close</button> -->
+        <!-- <button class="modal__btn-close" type="button">Close</button> -->
+        <button class="modal__btn-close modal-btn-close" type="button">
+          Close
+        </button>
+        <!-- <h2>Замовити дзвінок</h2>
+        <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p> -->
+
+        <h2 class="modal__title">Замовити дзвінок</h2>
+        <p class="modal__text">
+          Залишіть заявку та наш спеціаліст зв'яжеться з Вами!
+        </p>
+
         <!-- <form name="modal-form" autocomplete="on" novalidate> -->
         <form name="modal-form" autocomplete="off">
           <!-- <legend>Контактна iнформацiя</legend> -->
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-name"
+          <!-- <div class="form-field"> -->
+          <!-- <div class="form-field input"> -->
+          <div class="modal__form-field input">
+            <!-- <label class="form-label visually-hidden" for="user-name" -->
+            <label class="input__label visually-hidden" for="user-name"
               >Ім’я</label
             >
+
+            <!-- <input  class="form-input" -->
+            <!-- <input  class="input__input" -->
             <input
-              class="form-input"
+              class="input__control"
               type="text"
               id="user-name"
               name="user-name"
@@ -421,15 +502,17 @@
               minlength="2"
               maxlength="20"
               required
-              disabled
             />
+            <!-- disabled />  здесь можно сделать недосступным  -->
           </div>
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-tel"
+          <!-- <div class="form-field"> -->
+          <div class="modal__form-field input">
+            <!-- <label class="form-label visually-hidden" for="user-tel" -->
+            <label class="input__label visually-hidden" for="user-tel"
               >Телефон</label
             >
             <input
-              class="form-input"
+              class="input__control"
               type="tel"
               id="user-tel"
               name="user-tel"
@@ -438,12 +521,14 @@
               required
             />
           </div>
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-email"
+          <!-- <div class="form-field"> -->
+          <div class="modal__form-field input">
+            <!-- <label class="form-label visually-hidden" for="user-email" -->
+            <label class="input__label visually-hidden" for="user-email"
               >Електронна пошта</label
             >
             <input
-              class="form-input"
+              class="input__control"
               type="email"
               id="user-email"
               name="user-email"
@@ -452,7 +537,7 @@
             />
           </div>
 
-          <div class="form-field">
+          <!-- <div class="form-field">
             <label class="form-label visually-hidden" for="user-etag"
               >Поверх</label
             >
@@ -467,9 +552,9 @@
               step="4"
               required
             />
-          </div>
+          </div> -->
 
-          <div class="checkbox">
+          <!-- <div class="checkbox">
             <input
               class="checkbox-input visually-hidden"
               type="checkbox"
@@ -479,16 +564,18 @@
             <label class="checkbox-label" for="terms-conditions">
               Я точно погоджуюсь з політикою конфіденційності</label
             >
-          </div>
+          </div> -->
 
           <!-- <button class="form-button button" type="submit" disabled> -->
-          <button class="form-button button" type="submit">
+          <!-- <button class="form-button button" type="submit"> -->
+          <button class="modal__button button" type="submit">
             Замовити дзвінок
           </button>
 
           <p class="form-terms">
             Натискаючи на кнопку я погоджуюсь з
-            <a class="form-terms-link" href="#">політикою конфіденційності</a>
+            <!-- <a class="form-terms-link" href="#">політикою конфіденційності</a> -->
+            <a class="form-terms__link" href="#">політикою конфіденційності</a>
           </p>
 
           <!-- <fieldset>
