--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <!-- <link rel="stylesheet" href="./scss/main.css" /> -->
     <!-- <link rel="stylesheet" href="./css/main.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
 
   <body>
@@ -223,78 +227,171 @@
             Формати
           </h2>
           <!-- <div class="formats-container"> -->
-          <div class="formats-section__container">
-            <button class="carousel-button" type="button">
+          <!-- <div class="formats-section__container"> переименовать на __slider-->
+          <div class="formats-section__slider">
+            <!-- <button class="carousel-button" type="button"> -->
+            <!-- <button class="carousel-button prev" type="button"> доб.класс для убрать кнопки влево-вправо крцглые на моб версии только для этих кнопок-->
+            <button
+              class="formats-section__button carousel-button prev"
+              type="button"
+            >
               <!-- <svg class="carousel-arrow" width="16" height="16"></svg> -->
               <svg width="16" height="16">
                 <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
-            <!-- <ul class="formats-list"> -->
-            <ul class="formats-section__list">
-              <!-- <li class="format-item"> -->
-              <li class="formats-section__item">
-                <article class="format-card">
-                  <img
-                    class="format-card__image"
-                    src="./images/walrus-format.jpg"
-                    alt="Walrus format"
-                  />
-                  <!-- <h3 class="format-title" lang="en">Walrus</h3> -->
-                  <h3 class="format-card__title" lang="en">Walrus</h3>
+            <!-- div добавлен для swiper -->
+            <!-- <div class="swiper"> -->
+            <!-- чтобы кнопочки были не внутри слайдера  -->
+            <!-- <div class="swiper-container"> add class для overflow-->
+            <div class="formats-section__container swiper-container">
+              <!-- <ul class="formats-list"> -->
+              <!-- <ul class="formats-section__list swiper-wrapper"> не нужен со swiper -->
+              <!-- <ul class="swiper-wrapper">  доб. класс для сделать отступ до Pagination точек под слайдером после Добавления swipe-->
+              <ul class="formats-section__list swiper-wrapper">
+                <!-- <li class="format-item"> -->
+                <!-- <li class="formats-section__item">  заменили на слайдер из внешней dll https://swiperjs.com-->
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <!-- <div class="format-card__container">  был для решения проблем hover gradient-->
+                    <img
+                      class="format-card__image"
+                      src="./images/walrus-format.jpg"
+                      alt="Walrus format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Walrus</h3> -->
+                    <h3 class="format-card__title" lang="en">Walrus</h3>
 
-                  <!-- <div class="format-text"> -->
-                  <div class="format-card__text">
-                    <p>Площа: до 120 м2</p>
-                    <p>Меню: розширене меню</p>
-                    <p>
-                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                      офіціанти-різнороби
-                    </p>
-                    <p>Посадкові місця: є</p>
-                  </div>
-                </article>
-              </li>
-              <li class="formats-section__item">
-                <article class="format-card">
-                  <img
-                    class="format-card__image"
-                    src="./images/horseshoe-format.jpg"
-                    alt="Horseshoe format"
-                  />
-                  <!-- <h3 class="format-title" lang="en">Horseshoe</h3> -->
-                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 120 м2</p>
+                      <p>Меню: розширене меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: є</p>
+                    </div>
+                    <!-- </div> был для решения проблем hover gradient-->
+                  </article>
+                </li>
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <img
+                      class="format-card__image"
+                      src="./images/horseshoe-format.jpg"
+                      alt="Horseshoe format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Horseshoe</h3> -->
+                    <h3 class="format-card__title" lang="en">Horseshoe</h3>
 
-                  <!-- <div class="format-text"> -->
-                  <div class="format-card__text">
-                    <p>Площа: до 25 м2</p>
-                    <p>Меню: найпопулярніші позиції меню</p>
-                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                    <p>Посадкові місця: відсутні</p>
-                  </div>
-                </article>
-              </li>
-              <li class="formats-section__item">
-                <article class="format-card">
-                  <img
-                    class="format-card__image"
-                    src="./images/handlebar-format.jpg"
-                    alt="Handlebar format"
-                  />
-                  <!-- <h3 class="format-title" lang="en">Handlebar</h3> -->
-                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 25 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <img
+                      class="format-card__image"
+                      src="./images/handlebar-format.jpg"
+                      alt="Handlebar format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Handlebar</h3> -->
+                    <h3 class="format-card__title" lang="en">Handlebar</h3>
 
-                  <!-- <div class="format-text"> -->
-                  <div class="format-card__text">
-                    <p>Площа: до 15 м2</p>
-                    <p>Меню: найпопулярніші позиції меню</p>
-                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                    <p>Посадкові місця: відсутні</p>
-                  </div>
-                </article>
-              </li>
-            </ul>
-            <button class="carousel-button next" type="button">
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 15 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <!-- <div class="format-card__container">  был для решения проблем hover gradient-->
+                    <img
+                      class="format-card__image"
+                      src="./images/walrus-format.jpg"
+                      alt="Walrus format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Walrus</h3> -->
+                    <h3 class="format-card__title" lang="en">Walrus</h3>
+
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 120 м2</p>
+                      <p>Меню: розширене меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: є</p>
+                    </div>
+                    <!-- </div> был для решения проблем hover gradient-->
+                  </article>
+                </li>
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <img
+                      class="format-card__image"
+                      src="./images/horseshoe-format.jpg"
+                      alt="Horseshoe format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Horseshoe</h3> -->
+                    <h3 class="format-card__title" lang="en">Horseshoe</h3>
+
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 25 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide">
+                  <article class="format-card">
+                    <img
+                      class="format-card__image"
+                      src="./images/handlebar-format.jpg"
+                      alt="Handlebar format"
+                    />
+                    <!-- <h3 class="format-title" lang="en">Handlebar</h3> -->
+                    <h3 class="format-card__title" lang="en">Handlebar</h3>
+
+                    <!-- <div class="format-text"> -->
+                    <div class="format-card__text">
+                      <p>Площа: до 15 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+              </ul>
+              <div class="pagination">
+                <!-- <button   -> span -->
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+              </div>
+            </div>
+            <button
+              class="formats-section__button carousel-button next"
+              type="button"
+            >
               <!-- класс next добавлен для повернуть стрелку-кнопку вправо  -->
               <svg width="16" height="16">
                 <use href="./images/icons.svg#icon-arrow"></use>
@@ -641,6 +738,9 @@
       </div>
     </div>
 
+    <!-- слайдер https://swiperjs.com/get-started -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/formats-slider.js"></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
